--- a/Semistable reduction Magma codes.ipynb
+++ b/Semistable reduction Magma codes.ipynb
@@ -499,6 +499,75 @@
     "Factorization(V^2 + (4*L0.1/x)*V + (4*x^3 + (4*z - 64)*x^2 - 1024*x + 992*z - 7840)/(x^3*(x+z)));\n",
     "Factorization(V^2 + (4*L.1/x)*V + (4*x^3 - (4*z + 64)*x^2 - 1024*x - 992*z - 7840)/(x^3*(x+z)));"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "03a4cffa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "Scheme over Multivariate rational function field of rank 2 over GF(2^2) defined by\n",
+      "u + v*s,\n",
+      "v^2*s^3 + $.1/$.2*v*s + 1/$.2*v + 1/$.2*s,\n",
+      "x,\n",
+      "r,\n",
+      "Scheme over Multivariate rational function field of rank 2 over GF(2^2) defined by\n",
+      "u,\n",
+      "v,\n",
+      "x + r^2,\n",
+      "s\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Computing the irreducible components of Gamma_{t_i} for generic a_1 and a_4.\n",
+    "// Case a_4 is nonzero in k_L.\n",
+    "F<a1,a4> := PolynomialRing(FiniteField(2^2),2);\n",
+    "FF := FieldOfFractions(F);\n",
+    "A<u,v,x,r,s> := AffineSpace(FF,5);\n",
+    "C:=Scheme(A, [v*(1+a1*s)-(s+a4*s^3*v^2),x-r^2*(1-a1*v+a4*s^2*v^2),u-s*v,v*r]);\n",
+    "IrreducibleComponents(C);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "18cb11c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "Scheme over Multivariate rational function field of rank 1 over GF(2^2) defined by\n",
+      "u + 1/$.1*v + 1/$.1*s,\n",
+      "v*s + 1/$.1*v + 1/$.1*s,\n",
+      "x,\n",
+      "r,\n",
+      "Scheme over Multivariate rational function field of rank 1 over GF(2^2) defined by\n",
+      "u,\n",
+      "v,\n",
+      "x + r^2,\n",
+      "s\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Case a_4 is zero in k_L.\n",
+    "F<a1> := PolynomialRing(FiniteField(2^2),1);\n",
+    "FF := FieldOfFractions(F);\n",
+    "A<u,v,x,r,s> := AffineSpace(FF,5);\n",
+    "C:=Scheme(A, [v*(1+a1*s)-s,x-r^2*(1-a1*v),u-s*v,v*r]);\n",
+    "IrreducibleComponents(C);"
+   ]
   }
  ],
  "metadata": {
