--- a/Semistable reduction Magma codes.ipynb
+++ b/Semistable reduction Magma codes.ipynb
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "03a4cffa",
    "metadata": {},
    "outputs": [
@@ -521,7 +521,9 @@
       "v,\n",
       "x + r^2,\n",
       "s\n",
-      "]\n"
+      "]\n",
+      "1\n",
+      "0\n"
      ]
     }
    ],
@@ -532,12 +534,15 @@
     "FF := FieldOfFractions(F);\n",
     "A<u,v,x,r,s> := AffineSpace(FF,5);\n",
     "C:=Scheme(A, [v*(1+a1*s)-(s+a4*s^3*v^2),x-r^2*(1-a1*v+a4*s^2*v^2),u-s*v,v*r]);\n",
-    "IrreducibleComponents(C);"
+    "Irr := IrreducibleComponents(C);\n",
+    "Irr;\n",
+    "Genus(Curve(Irr[1]));\n",
+    "Genus(Curve(Irr[2]));"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "18cb11c4",
    "metadata": {},
    "outputs": [
@@ -556,7 +561,9 @@
       "v,\n",
       "x + r^2,\n",
       "s\n",
-      "]\n"
+      "]\n",
+      "1\n",
+      "0\n"
      ]
     }
    ],
@@ -566,7 +573,9 @@
     "FF := FieldOfFractions(F);\n",
     "A<u,v,x,r,s> := AffineSpace(FF,5);\n",
     "C:=Scheme(A, [v*(1+a1*s)-s,x-r^2*(1-a1*v),u-s*v,v*r]);\n",
-    "IrreducibleComponents(C);"
+    "IrreducibleComponents(C);\n",
+    "Genus(Curve(Irr[1]));\n",
+    "Genus(Curve(Irr[2]));"
    ]
   }
  ],
