--- a/Semistable reduction Magma codes.ipynb
+++ b/Semistable reduction Magma codes.ipynb
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "03a4cffa",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "18cb11c4",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
       "x + r^2,\n",
       "s\n",
       "]\n",
-      "1\n",
+      "0\n",
       "0\n"
      ]
     }
@@ -573,7 +573,8 @@
     "FF := FieldOfFractions(F);\n",
     "A<u,v,x,r,s> := AffineSpace(FF,5);\n",
     "C:=Scheme(A, [v*(1+a1*s)-s,x-r^2*(1-a1*v),u-s*v,v*r]);\n",
-    "IrreducibleComponents(C);\n",
+    "Irr := IrreducibleComponents(C);\n",
+    "Irr;\n",
     "Genus(Curve(Irr[1]));\n",
     "Genus(Curve(Irr[2]));"
    ]
